[tool.poetry]
name = "rooster"
version = "0.0.1"
description = "Deploying ray clusters on condor"
authors = ["Alec Gunny <alecg@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyCondor = "^0.6"
ray = "^2.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3"
pytest = "^7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["aframe"]
multi_line_output = 3
include_trailing_comma = true
